--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,80 @@
-body{
+body {
     font-family: 'Roboto', sans-serif;
-    }
-    
+    background-color: #97CE4C;
+    padding: 1rem;
+}
 
+header{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+header img {
+    height: 200px;
+}
+
+.section{
+    display: flex;
+    flex-direction: row;
+}
+
+.section img{
+    height: 400px;
+    border-radius: 20px;
+}
+
+.section p{
+    padding: 0 1rem;
+}
+
+.section-reverse{
+    flex-direction: row-reverse;
+}
 /*CARDS*/
-.Cards{
-width: 800px;
-height: 320px;
-margin: 10px 10px 50px;
-display: flex;
-align-items: center;
-background-color: #383838;
-border-radius: 25px;
-color: white;
-padding: 40px;
+
+.section-buscador{
+    padding: 1rem 0;
+    background-color:#c4ff72;
+    margin: 2rem 0;
 }
 
-.TextCard{
-padding: 100px;
-font-size: x-large;
+.section-buscador h2{
+    padding-left: 2rem;
+}
+
+.Cards {
+    width: 400px;
+    height: 200px;
+    margin: 10px 10px 50px;
+    display: flex;
+    align-items: center;
+    background-color: #383838;
+    border-radius: 25px;
+    color: white;
+    padding: 10px;
+}
+
+.Cards img{
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
+}
+
+.TextCard {
+    padding-left: 20px;
 
 }
 
+.TextCard p{
+    font-size:medium;
+    margin: 0;
+    text-align:start ;
+}
+
+.container-cards{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
