--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: #97CE4C;
     padding: 1rem;
+    color: #272727;
 }
 
 header{
@@ -14,6 +15,14 @@ header img {
     height: 200px;
 }
 
+.subtitle{
+    color:  white;
+    background-color: #383838;
+    border-radius: 15px;
+    text-align: center;
+    padding: 1rem;
+}
+
 .section{
     display: flex;
     flex-direction: row;
@@ -22,10 +31,13 @@ header img {
 .section img{
     height: 400px;
     border-radius: 20px;
+    border: 8px solid #383838;
 }
+
 
 .section p{
     padding: 0 1rem;
+    font-size:x-large;
 }
 
 .section-reverse{
@@ -42,6 +54,19 @@ header img {
 .section-buscador h2{
     padding-left: 2rem;
 }
+
+.buscador{
+    margin-left: 5.5rem;
+    width: 280px;
+    text-align: center;
+    height: 30px;
+    border-radius: 10px;
+    background-color: #97CE4C;
+    border: solid 6px #383838;
+}
+
+
+
 
 .Cards {
     width: 400px;
@@ -77,4 +102,8 @@ header img {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+footer{
+    text-align: center;
 }
